attempting to run script.ps1 on startup